# firefighter

./: README.md  environment.yml  pyproject.toml
binder/: environment.yml
data_2020/: 1ra.xlsx  2da.xlsx  3ra.xlsx  4ta.xlsx  5ta.xlsx  6ta.xlsx  7ma.xlsx  8va.xlsx  analisis.ipynb  analisis_aux.py  data_2020.csv  geo_analisis.ipynb  lectura.ipynb  servicios_2020.xlsx
notebooks/modelos/: pruebas_modelos.ipynb
notebooks/visualizacion/: visualizacion_data.ipynb
src/firefighter/: __init__.py  cli.py  main.py
src/firefighter/config/: settings.py
src/firefighter/features/: builder.py
src/firefighter/geocoding/: __init__.py  geocoder.py  reverse.py
src/firefighter/io/: __init__.py  loader.py
src/firefighter/models/: __init__.py  base.py  classifier.py
src/firefighter/pipelines/: __init__.py  predict.py  train.py
src/firefighter/visualization/: __init__.py  plots.py
