[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firefighter"
version = "0.1.0"
description = "Firefighter end-to-end pipeline package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "plotly",
]

[project.scripts]
firefighter = "firefighter.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
